@@ -1,3 +1,6 @@
+17 February 2011: Wouter
+	- Fix leak of compressiontable when the domain table increases in size.
+
 11 February 2011: Wouter
 	- added test case to do with bug357.
 
